--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "private": true,
   "license": "UNLICENSED",
-  "dependencies": {},
+  "dependencies": {
+    "styled-components": "^2.2.1"
+  },
   "devDependencies": {
     "babel-core": "^6.7.6",
     "babel-eslint": "^6.0.2",
@@ -44,7 +46,6 @@
     "immutable": "^3.7.6",
     "normalize.css": "^4.0.0",
     "normalizr": "^2.0.1",
-    "radium": "^0.17.1",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-immutable-proptypes": "^1.7.1",
