--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
+    "mobx": "^3.3.1",
+    "mobx-react": "^4.3.3",
+    "mobx-react-router": "^4.0.1",
     "styled-components": "^2.2.1"
   },
   "devDependencies": {
